fix search on ios devices, improve fetch evolution chain

--- a/src/app/detailSection/evo/evo.component.scss
+++ b/src/app/detailSection/evo/evo.component.scss
@@ -9,11 +9,17 @@
 .evoImg {
     height: auto;
     width: 80px;
+    @media(max-width: 599px){
+        width: 60px;
+    }
 }
 
 .singleChain{
     @include dFlex($fd: column, $g: 16px);
     h3{
         font-size: 18px;
+        @media(max-width: 599px){
+            font-size: 14px;
+        }
     }
 }
