--- a/src/app/poke-details/poke-details.component.scss
+++ b/src/app/poke-details/poke-details.component.scss
@@ -59,8 +59,6 @@ main {
   margin-bottom: auto;
   @include dFlex($jc: space-between);
   .closeBtn {
-    width: 30px;
-    height: 30px;
     cursor: pointer;
     transition: transform ease-in 100ms;
     &:hover{
