--- a/src/app/poke-list/poke-list.component.scss
+++ b/src/app/poke-list/poke-list.component.scss
@@ -3,8 +3,8 @@
 main{
     max-width: $content-limit;
     margin-inline: auto;
-    min-height: calc(100vh - 160px);
-    @include dFlex($fd: column, $g: 16px);
+    min-height: calc(100vh - 160px + 80px);
+    @include dFlex($fd: column, $g: 16px, $jc: flex-start);
     animation-duration: 125ms;
     padding: 96px 16px 16px 16px;
     @media(max-width: 599px){
